Main Page.css
    .yard {
      width: 1200px;
    }
   
    .track {
      padding-top: 10px;
      padding-bottom: 10px;

    }

    .button {
    height:50px;
    /*width:70px;*/
    border-radius: 30%;
    border-width: 2px;
    border-style: solid;
    font-size: 15px;
    background-color: #FFFFFF;
    /*position: relative;*/
    display: inline-block;
    }

    .carOneUnit {
    position: absolute;
    width:70px;
    /*height:50px;
    border-radius: 30%;
    border-width: 2px;
    border-style: solid;
    font-size: 15px;
    background-color: #FFFFFF;
    display: inline;
    */
    }

    .carTwoUnits {
    width:140px;
    z-index:2;
    position: absolute;
    /*height:50px;    
    border-radius: 30%;
    border-width: 2px;
    border-style: solid;
    font-size: 15px;
    background-color: #FFFFFF;
    display: inline;
    
    */
    }

    .carFiveUnits {
    width:350px;
    z-index:2;
    position: absolute;
    /*height:50px;    
    border-radius: 30%;
    border-width: 2px;
    border-style: solid;
    font-size: 15px;
    background-color: #FFFFFF;
    display: inline;
    
    position: absolute;*/
    }

    .unit {
    height:50px;
    width:70px;
    border-radius: 30%;
    border-width: 2px;
    font-size: 15px;
    background-color: #CDCDEE;
    display: inline-block;
    position: relative;
    /*z-index:1;*/
    left: 100px;
    }
    
  .trackbutton {
    position: absolute;
    height:50px;
    width:100px;
    border-radius: 30%;
    border-width: 2px;
    border-style: solid;
    font-size: 15px;
    background-color: #FFFFFF;
    display: inline;
    }

    .white {
      background-color: white;
    }

    .green {
      background-color: green;
    }

    .blue {
      background-color: blue;
    }

    .red {
      background-color: red;
    }

    .highlight {
      border-color: red;
    }

    #move {
  background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #f24537), color-stop(1, #c62d1f) );
  background:-moz-linear-gradient( center top, #f24537 5%, #c62d1f 100% );
  filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#f24537', endColorstr='#c62d1f');
  background-color:#f24537;
  -webkit-border-top-left-radius:0px;
  -moz-border-radius-topleft:0px;
  border-top-left-radius:0px;
  -webkit-border-top-right-radius:0px;
  -moz-border-radius-topright:0px;
  border-top-right-radius:0px;
  -webkit-border-bottom-right-radius:0px;
  -moz-border-radius-bottomright:0px;
  border-bottom-right-radius:0px;
  -webkit-border-bottom-left-radius:0px;
  -moz-border-radius-bottomleft:0px;
  border-bottom-left-radius:0px;
  text-indent:0px;
  display:inline-block;
  color:#ffffff;
  font-family:Arial Black;
  font-size:19px;
  font-weight:bold;
  font-style:normal;
  height:50px;
  line-height:50px;
  width:100px;
  text-decoration:none;
  text-align:center;
  position: fixed;
  right: 30px;
 }

    body {
     margin: 0; 
     background: #ffd65e; /* Old browsers */
background: -moz-radial-gradient(center, ellipse cover,  #ffd65e 0%, #febf04 100%); /* FF3.6+ */
background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%,#ffd65e), color-stop(100%,#febf04)); /* Chrome,Safari4+ */
background: -webkit-radial-gradient(center, ellipse cover,  #ffd65e 0%,#febf04 100%); /* Chrome10+,Safari5.1+ */
background: -o-radial-gradient(center, ellipse cover,  #ffd65e 0%,#febf04 100%); /* Opera 12+ */
background: -ms-radial-gradient(center, ellipse cover,  #ffd65e 0%,#febf04 100%); /* IE10+ */
background: radial-gradient(ellipse at center,  #ffd65e 0%,#febf04 100%); /* W3C */
filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffd65e', endColorstr='#febf04',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */

     }

    #navbar ul { 
    margin: 0; 
    padding: 10px; 
    border: 0;
    list-style-type: none; 
    text-align: center;
    background: #b5bdc8; /* Old browsers */
    background: -moz-linear-gradient(top,  #b5bdc8 0%, #828c95 0%, #28343b 100%); /* FF3.6+ */
    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#b5bdc8), color-stop(0%,#828c95), color-stop(100%,#28343b)); /* Chrome,Safari4+ */
    background: -webkit-linear-gradient(top,  #b5bdc8 0%,#828c95 0%,#28343b 100%); /* Chrome10+,Safari5.1+ */
    background: -o-linear-gradient(top,  #b5bdc8 0%,#828c95 0%,#28343b 100%); /* Opera 11.10+ */
    background: -ms-linear-gradient(top,  #b5bdc8 0%,#828c95 0%,#28343b 100%); /* IE10+ */
    background: linear-gradient(to bottom,  #b5bdc8 0%,#828c95 0%,#28343b 100%); /* W3C */
    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b5bdc8', endColorstr='#28343b',GradientType=0 ); /* IE6-9 */
    } 

    #navbar ul li {  
    display: inline-block;
    background: transparent;
    } 

    #navbar ul li button {
    display: inline-block;
    padding: 10px;
    background: transparent;
    font-weight: bold;
    color: #FFFFFF;
    border:transparent;
    }

    #navbar ul li a:hover { 
    color: #0EC6D7; 
    background-color: #8B008B; 
    }

   #logo{
   position: fixed;
   top:15px;
   left: 10px;
   }

